--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>My first project</title>
+    <title>My First Project!</title>
   </head>
   <body>
     <div class="game-intro">
-        <div class="stars"></div>
-        <div class="twinkling"></div>
-        <div class="clouds"></div>
-     <!-- <img src="./images/logo.png" alt="" class="logo-img" />
-      <br />
-     <!-- <button id="start-button">StartGame</button>
-      <!--<p>Use the left and right arrow to control the car!</p>
-      <!--<img src="./images/arrows.png" alt="" class="arrows-img" /> -->
-    </div>
+      <h1>Space Impact... kind off!</h1>
 
-    <div id="game-board">
-      <canvas id="canvas" width="500" height="700"></canvas>
-    </div>
+    <span class="controls">
+      <div>Move the Square with W-S-D-A</div>
+      <div>Use L to shoot!</div>
+      <div>Just chill!</div>
+    </span>
+    
+    <canvas id="canvas" width="550" height="600"></canvas>
+    <script src="index.js" type="module"></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="Player.js"></script>
+    <script type="text/javascript" src="BulletController.js"></script>
+    <script type="text/javascript" src="Bullet.js"></script>
+    <script type="text/javascript" src="Enemy.js"></script>
 
-    <script type="text/javascript" src="js/java.js"></script>
-    <script type="text/javascript" src="js/spaceship.js"></script>
   </body>
 </html>
