--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <h1>Space Impact... kind off!</h1>
 
     <span class="controls">
-      <div>Move the Square with W-S-D-A</div>
-      <div>Use L to shoot!</div>
-      <div>Just chill!</div>
+      <div><strong>Move the Square with W-S-D-A</strong></div>
+      <div><strong>Use L to shoot!</strong></div>
+      <div><strong>Just chill!</strong></div>
     </span>
     
     <canvas id="canvas" width="550" height="600"></canvas>
